-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.6.0-rc, Qt Creator 3.0.0-rc1
-
None
int main(void) { int a = 42; return 0; }
Building this with gcc gives the following output:
main.cpp: In function 'int main()': main.cpp:5:9: warning: unused variable 'a' [-Wunused-variable]
This is a single warning. On the sidebar (the Build progress) the number 1 is displayed, and same for the badge on Issues label.
Filtering out warnings removes the badge, and unfiltering them displays 2.
I also somehow got negative numbers on the badge (without any filtering/unfiltering) on subsequent build, but I can't currently reproduce this.