Include unknown errors in badge number

Those were treated incoherent between different places.

Task-number: QTCREATORBUG-7792
Change-Id: I6dcd596ebb5e12dc952a93db8aab75930caadc6a
Reviewed-by: Tobias Hunger <tobias.hunger@nokia.com>