src/plugins/projectexplorer/taskwindow.cpp
@@ -411,6 +411,10 @@ void TaskWindow::addTask(const Task &task)
             && !d->m_filter->filteredCategories().contains(task.category)) {
         setBadgeNumber(++d->m_badgeCount);
     }
+    if (task.type == Task::Unknown && d->m_filter->filterIncludesUnknowns()
+            && !d->m_filter->filteredCategories().contains(task.category)) {
+        setBadgeNumber(++d->m_badgeCount);
+    }
 }
 
 void TaskWindow::removeTask(const Task &task)
@@ -425,6 +429,10 @@ void TaskWindow::removeTask(const Task &task)
         setBadgeNumber(--d->m_badgeCount);
     }
     if (task.type == Task::Warning && d->m_filter->filterIncludesWarnings()
+            && !d->m_filter->filteredCategories().contains(task.category)) {
+        setBadgeNumber(--d->m_badgeCount);
+    }
+    if (task.type == Task::Unknown && d->m_filter->filterIncludesUnknowns()
             && !d->m_filter->filteredCategories().contains(task.category)) {
         setBadgeNumber(--d->m_badgeCount);
     }
